src/styles/styles.scss
/* You can add global styles to this file, and also import other style files */

@import 'mixin';
html,
body {
  font-family: 'Open Sans', sans-serif !important;
  margin: 0px;
}

.content {
  margin: 1em;
}

.ng-title-icon>i {
  background-image: url("../assets/ng.png");
}

.ng-title-icon>i,
azfunc-title-icon>i {
  background-repeat: no-repeat;
  background-position: center center;
  padding: 1.2em;
}

.title {
  margin-right: 1em;
}

.router-link-active {
  @include primary-background-contrast-color;
}

pre {
  background-color: map-get($accent, 100);
  padding: 1em;
  font-size: 12px;
}

div.content {
  margin: 0em;
}

.text_premise {
  color: #2d2d2d;
  font-size: 14px;
  font-weight: 300;
  margin-bottom: 20px;
  overflow: hidden;
  text-align: justify;
  width: 100%;
  font-family: 'Open Sans', sans-serif !important;
}

.mat-toolbar.mat-primary {
  background: #fff;
  color: rgba(0, 0, 0, 0.87);
}

.td-notification-count.mat-primary {
  color: #fff;
}

.progress {
  display: flex;
  align-content: center;
  align-items: center;
  margin: 2em 0em;
}

.snack {
  @include selected-style;
}

.pull-right {
  position: fixed !important;
  right: 8px;
}

.mat-tab-header {
  margin-top: 1em;
}

md-tab-group {
  .md-tab-header {
    background: #fff !important;
    margin-top: 1em;
  }
}

@media (max-width: 414px) {
  .pull-right {
    display: none !important;
  }
}


/* default .loading styles, .loading should be invisible, opacity: 0, z-index: -1 */

.loading {
  opacity: 0;
  transition: opacity .8s ease-in-out;
  position: fixed;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  background: #000;
  z-index: -1;
}


/* .loading screen is visible when app is not bootstraped yet, .my-app is empty */

my-app:empty+.loading {
  opacity: 1;
  z-index: 100;
}

@mixin animation($animate...) {
  $max: length($animate);
  $animations: '';
  @for $i from 1 through $max {
    $animations: #{$animations + nth($animate, $i)};
    @if $i < $max {
      $animations: #{$animations + ", "};
    }
  }
  -webkit-animation: $animations;
  -moz-animation: $animations;
  -o-animation: $animations;
  animation: $animations;
}

@mixin transition($args...) {
  -webkit-transition: $args;
  -moz-transition: $args;
  -ms-transition: $args;
  -o-transition: $args;
  transition: $args;
}

@mixin keyframes($animationName) {
  @-webkit-keyframes #{$animationName} {
    @content;
  }
  @-moz-keyframes #{$animationName} {
    @content;
  }
  @-o-keyframes #{$animationName} {
    @content;
  }
  @keyframes #{$animationName} {
    @content;
  }
}

//theme
$yellow:#f5d300;
$black: #292929;
$bg: #191919;
$lines: #757474;
$white: #fff;
body {
  background-color: $bg;
  font-family: 'Open Sans', sans-serif;
}

.text {
  opacity: 0;
  position: absolute;
  z-index: 7;
  text-align: left;
  margin: -50px 0 0 -150px;
  width: 300px;
  height: 100px;
  top: 50%;
  left: 50%;
  font-size: 48px;
  font-weight: 700;
  p {
    white-space: nowrap;
    overflow: hidden;
    width: 100%;
    @include animation('type .3s steps(60, end) 3.7s');
  }
  p:nth-child(2) {
    @include animation('type2 .5s steps(60, end) 3.7s');
  }
  @include animation('on .6s ease-in-out 3.7s forwards');
  button {
    border: 0;
    opacity: 0;
    background: $bg;
    color: $yellow;
    border: 1px solid $bg;
    letter-spacing: 2px;
    padding: .5rem 2.5rem;
    font-size: 12px;
    font-weight: 600;
    text-transform: uppercase;
    cursor: pointer;
    @include transition(color .5s,
    background-color .5s);
    @include animation('on .6s ease-in-out 4s forwards');
    &:hover {
      background: $yellow;
      color: $bg;
      border: 1px solid $bg;
    }
  }
}

.splash {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  &_logo {
    position: absolute;
    margin: -15px 0 0 -25px;
    top: 50vh;
    z-index: 5;
    left: 50vw;
    width: 50px;
    text-align: center;
    height: 30px;
    font-size: 26px;
    font-weight: 600;
    color: #ffffff;
    opacity: 1;
    will-change: opacity;
    @include animation('logo .3s ease-in 1.5s forwards, off .6s ease-in-out 3.2s forwards');
    &:before {
      display: block;
      position: absolute;
      left: 15px;
      bottom: -5px;
      width: 20px;
      height: 1px;
      background-color: $lines;
      content: "";
    }
    &:after {
      display: block;
      position: absolute;
      left: 15px;
      top: -5px;
      width: 20px;
      height: 1px;
      background-color: $lines;
      content: "";
      will-change: width;
    }
  }
  &_svg {
    position: relative;
    margin: auto;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    bottom: 0;
    right: 0;
    svg {
      width: 100%;
      height: 100%;
      -webkit-backface-visibility: visible;
      backface-visibility: visible;
      rect {
        width: 100%;
        height: 100%;
        fill: $yellow;
        stroke: 0;
        -webkit-clip-path: polygon(45vw 40vh, 55vw 40vh, 55vw 60vh, 45vw 60vh);
        clip-path: polygon(45vw 40vh, 55vw 40vh, 55vw 60vh, 45vw 60vh);
        @include animation('expand .7s ease-in forwards 2.7s');
      }
    }
  }
  &_minimize {
    position: absolute;
    margin: auto;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 4;
    svg {
      width: 100%;
      height: 100%;
      -webkit-backface-visibility: visible;
      backface-visibility: visible;
      rect {
        width: 100%;
        height: 100%;
        -webkit-clip-path: polygon(0vw 0vh, 100vw 0vh, 100vw 100vh, 0vw 100vh);
        clip-path: polygon(0vw 0vh, 100vw 0vh, 100vw 100vh, 0vw 100vh);
        @include animation('scale .2s ease-out forwards 1s, hide 1.3s ease-out forwards 1.2s');
      }
    }
  }
}

@include keyframes(scale) {
  100% {
    -webkit-clip-path: polygon(45vw 40vh, 55vw 40vh, 55vw 60vh, 45vw 60vh);
    clip-path: polygon(45vw 40vh, 55vw 40vh, 55vw 60vh, 45vw 60vh);
  }
}

@include keyframes(hide) {
  100% {
    fill: transparent;
  }
}

@include keyframes (off) {
  100% {
    opacity: 0;
  }
}

@include keyframes (on) {
  100% {
    opacity: 1;
  }
}

@include keyframes (logo) {
  100% {
    color: $black;
  }
}

@include keyframes (type) {
  0% {
    width: 0;
  }
}

@include keyframes (type2) {
  0% {
    width: 0;
  }
  50% {
    width: 0;
  }
  100% {
    width: 100;
  }
}

@include keyframes(expand) {
  0% {}
  25% {
    -webkit-clip-path: polygon(0vw 0vh, 55vw 40vh, 55vw 58vh, 45vw 58vh);
    clip-path: polygon(0vw 0vh, 55vw 40vh, 55vw 60vh, 45vw 60vh);
    fill: white;
  }
  50% {
    -webkit-clip-path: polygon(0vw 0vh, 100vw 0vh, 55vw 60vh, 45vw 60vh);
    clip-path: polygon(0vw 0vh, 100vw 0vh, 55vw 60vh, 45vw 60vh);
    fill: $yellow;
  }
  75% {
    -webkit-clip-path: polygon(0vw 0vh, 100vw 0vh, 55vw 60vh, 0vw 100vh);
    clip-path: polygon(0vw 0vh, 100vw 0vh, 55vw 60vh, 0vw 100vh);
    fill: white;
  }
  100% {
    -webkit-clip-path: polygon(0vw 0vh, 100vw 0vh, 100vw 100vh, 0vw 100vh);
    clip-path: polygon(0vw 0vh, 100vw 0vh, 100vw 100vh, 0vw 100vh);
    fill: $yellow;
  }
}

// HOME PAGE
#h_e_card {
  margin-left: 5em !important;
  margin-right: 5em!important;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.h_e_btn_bottm {
  z-index: 1;
}

// FOOTER
.f_r_headline {
  font-size: 15px;
  color: $white;
}

.f_r_border {
  border-right: 1px solid #6b6b6b;
}

.f_l_border div,
.f_l_border address {
  font-style: normal;
  font-size: 13px;
  color: #969595;
}

.f_r_border div {
  font-size: 13px;
  color: #969595;
}

.f_r_copyright {
  color: #6b6b6b;
  font-weight: 600;
}

// PREMISE
.p_e_img {
  margin-right: 5em!important;
}

// ABOUT_US
.a_t_img {
  margin-left: 5em!important;
}

// COMMON
a {
  color: #87be49;
}

@media (max-width: 950px) {
  #h_e_card {
    margin-left: 0 !important;
    margin-right: 0!important;
  }
}

@media (max-width: 600px) {
  .f_r_border {
    border-right: none;
  }
  // PREMISE
  .p_e_img {
    margin-right: 0;
  }
  // ABOUT_US
  .a_t_img {
    margin-left: 0;
  }
}

